--- a/IHM/IHM/App.xaml
+++ b/IHM/IHM/App.xaml
@@ -3,6 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IHM.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <Color x:Key="corTransistorOutput">#00416B</Color>
+        </ResourceDictionary>
+        <ResourceDictionary>
+            <Color x:Key="corDigitalInput">Gray</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
