--- a/IHM/IHM/Views/Tela_IHM.xaml
+++ b/IHM/IHM/Views/Tela_IHM.xaml
@@ -7,7 +7,7 @@
 
     <ContentPage.Resources>
         <DataTemplate x:Key="TransistorOutputTemplate">
-            <apresentacao:ExpanderTransistorOutput TransistorOutput="{Binding Path=.}"/>
+            <apresentacao:ViewTransistorOutput TransistorOutput="{Binding Path=.}"/>
         </DataTemplate>
         <DataTemplate x:Key="Nenhum">
             <Label Text="nenhum"/>
@@ -328,7 +328,8 @@
                     <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_3">
+                           x:Name="TRANSISTOR_OUTPUT_3"
+                           BindingContext="{Binding Path=TransistorOutput3}">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </Frame.GestureRecognizers>
@@ -338,14 +339,15 @@
                            FontAttributes="Bold"
                            TextColor="White"
                            FontSize="Large"
-                           Text="{Binding Path= TransistorOutput3.Nome}">
+                           Text="{Binding Path=TransistorOutput3.Nome}">
                     </Label>
                 </Grid>
                 <Grid Grid.Row="6" Grid.Column="3">
                     <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_4">
+                           x:Name="TRANSISTOR_OUTPUT_4"
+                           BindingContext="{Binding Path=TransistorOutput4}">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </Frame.GestureRecognizers>
@@ -362,7 +364,8 @@
                     <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_5">
+                           x:Name="TRANSISTOR_OUTPUT_5"
+                           BindingContext="{Binding Path=TransistorOutput5}">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </Frame.GestureRecognizers>
@@ -379,7 +382,8 @@
                     <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_6">
+                           x:Name="TRANSISTOR_OUTPUT_6"
+                           BindingContext="{Binding Path=TransistorOutput6}">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </Frame.GestureRecognizers>
@@ -389,14 +393,15 @@
                            FontAttributes="Bold"
                            TextColor="White"
                            FontSize="Large"
-                           Text="{Binding Path= TransistorOutput6.Nome}">
+                           Text="{Binding Path=TransistorOutput6.Nome}">
                     </Label>
                 </Grid>
                 <Grid Grid.Row="7" Grid.Column="2">
                     <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_7">
+                           x:Name="TRANSISTOR_OUTPUT_7"
+                           BindingContext="{Binding Path=TransistorOutput7}">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                         </Frame.GestureRecognizers>
@@ -413,7 +418,8 @@
                 <Frame CornerRadius="5"
                            BackgroundColor="{StaticResource corTransistorOutput}"
                            HasShadow="true"
-                           x:Name="TRANSISTOR_OUTPUT_8">
+                           x:Name="TRANSISTOR_OUTPUT_8"
+                           BindingContext="{Binding Path=TransistorOutput8}">
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                     </Frame.GestureRecognizers>
@@ -423,7 +429,7 @@
                            FontAttributes="Bold"
                            TextColor="White"
                            FontSize="Large"
-                           Text="{Binding Path= TransistorOutput8.Nome}">
+                           Text="{Binding Path=TransistorOutput8.Nome}">
                 </Label>
             </Grid>
 
