--- a/IHM/IHM/Views/Tela_IHM.xaml
+++ b/IHM/IHM/Views/Tela_IHM.xaml
@@ -13,6 +13,9 @@
             <DataTemplate x:Key="DigitalInputTemplate">
                 <apresentacao:ViewDigitalInput DigitalInput="{Binding Path=.}"/>
             </DataTemplate>
+            <DataTemplate x:Key="AnalogicaInputTemplate">
+                <apresentacao:ViewAnalogicaInput AnalogicaInput="{Binding Path=.}"/>
+            </DataTemplate>
             <DataTemplate x:Key="Nenhum">
                 <Label Text="nenhum"/>
             </DataTemplate>
@@ -30,14 +33,24 @@
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
-                <StackLayout Grid.Row="0"
-                BindableLayout.ItemsSource="{Binding TransistorOutputsViewModel}"
-                BindableLayout.ItemTemplate="{StaticResource TransistorOutputTemplate}">
+                <StackLayout
+                    Grid.Row="0"
+                    BindableLayout.ItemsSource="{Binding TransistorOutputsViewModel}"
+                    BindableLayout.ItemTemplate="{StaticResource TransistorOutputTemplate}">
+                </StackLayout>
+                <StackLayout Grid.Row="1"
+                    BindableLayout.ItemsSource="{Binding DigitalInputsViewModel}"
+                    BindableLayout.ItemTemplate="{StaticResource DigitalInputTemplate}">
+                </StackLayout>
+                <StackLayout Grid.Row="2"               
+                    BindableLayout.ItemsSource="{Binding AnalogicaInputsViewModel}"
+                    BindableLayout.ItemTemplate="{StaticResource AnalogicaInputTemplate}">
                 </StackLayout>
             </Grid>
-            
-            
+
+
             <Grid 
                 Grid.Column="0"
                 RowSpacing="4"
